[package]
authors = ["Walfie <walfington@gmail.com>"]
name = "crabigator"
version = "0.1.0"

[dependencies]
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", optional = true, features = ["serde"] }

[features]
default = ["chrono"]

[dev-dependencies]
tokio-core = "0.1"
hyper-tls = "0.1"
